--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.google.android.gms:play-services-maps:7.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
-
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
